--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apostol Performance Assessment #1</title>
+    <script src="assets/js/bundle.js"></script>
 </head>
 <body>
     <p>shuefhu</p>
