--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apostol Performance Assessment #1</title>
+    <link rel="stylesheet" href="assets/css/main.css">
     <script src="assets/js/bundle.js"></script>
 </head>
 <body>
-    <p>shuefhu</p>
+    <div id="dragon"></div>
+    <section id="mapContainer">
+        <!-- #map -->
+    </section>
+    <!-- <div id="knifeContainer" class="ready">
+        <div id="knifeLimiter">
+            <img id="knife" src="assets/img/knife.png">
+        </div>
+    </div> -->
+    <section id="scroller"></section>
+    <section id="knifeContainer"></section>
+    <section id="infoBox">
+        <button>Close</button>
+        <p>something to say</p>
+        <button>Next</button>
+    </section>
 </body>
 </html>
