--- a/index.html
+++ b/index.html
@@ -20,9 +20,18 @@
     <section id="scroller"></section>
     <section id="knifeContainer"></section>
     <section id="infoBox">
-        <button>Close</button>
-        <p>something to say</p>
-        <button>Next</button>
+        <section id="header">
+            <h1>17 Regions of the Philippines</h1>
+            <p>Just keep scrolling down slowly.</p>
+        </section>
+        <section id="info" class="grid">
+            <h1></h1>
+            <p>
+                Coordinates: <span id="coordinates"></span><br>
+                <span id="description"></span>
+            </p>
+            <section id="regionImg"><img></section>
+        </section>
     </section>
 </body>
 </html>
