--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apostol Performance Assessment #1</title>
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/main2.css">
     <script src="assets/js/bundle.js"></script>
 </head>
 <body>
@@ -17,21 +17,20 @@
             <img id="knife" src="assets/img/knife.png">
         </div>
     </div> -->
-    <section id="scroller"></section>
-    <section id="knifeContainer"></section>
-    <section id="infoBox">
-        <section id="header">
+    <section id="scroller" class="ignore"></section>
+    <section id="knifeContainer" class="ignore"></section>
+    <section id="filler"></section>
+        <!-- <section id="header">
             <h1>17 Regions of the Philippines</h1>
             <p>Just keep scrolling down slowly.</p>
-        </section>
-        <section id="info" class="grid">
-            <h1></h1>
-            <p>
-                Coordinates: <span id="coordinates"></span><br>
-                <span id="description"></span>
-            </p>
-            <section id="regionImg"><img></section>
-        </section>
+        </section> -->
+    <section id="info" class="grid">
+        <h1></h1>
+        <p>
+            Coordinates: <span id="coordinates"></span><br>
+            <span id="description"></span>
+        </p>
+        <section id="regionImg"></section>
     </section>
 </body>
 </html>
